# TTTRPS

./: .GEMINI  .gitignore  FEATURE_PARITY_TASKS.md  GEMINI.md  MEILISEARCH_INTEGRATION_TASKS.md  README.md  build.sh
.gemini/: settings.json
UXdesign/: design.md  requirements.md  tasks.md
assets/settings/: eberron_artificer.yaml  forgotten_realms_sage.yaml  ravenloft_gothic.yaml
docs/: CLAUDE_DESKTOP_CDP_PROVIDER.md  claude-desktop.md  cli-backends.md
feature-parity/: design.md  requirements.md  tasks.md
frontend/: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml  index.html  input.css  package.json
frontend-leptos/src/: bindings.rs
frontend/public/: effects.css  main.css  shared-animations.css  tailwind.css  themes.css
frontend/src/: app.rs  bindings.rs  main.rs
frontend/tests/: header_link_test.rs  mod.rs
inspection-results/: DuplicatedCode_aggregate.json
planning/: Design.md  Requirements.md  Tasks.md
planning/akasha-integration/: Design.md  Requirements.md  Tasks.md
planning/embeddings/rapydocs/: .gitignore  CLAUDE.md  EMBEDDING_GENERATION.md  LICENSE  README.md  mbed  pyproject.toml  setup.py
planning/embeddings/rapydocs/mbed-unified/: .dockerignore  Dockerfile  README.md  docker-compose.yml  examples  mbed  pyproject.toml  test  test-uv  uv-test
planning/embeddings/rapydocs/mbed-unified/config/postgres/: init.sql
planning/embeddings/rapydocs/mbed-unified/docs/: CUDA_BACKEND.md  PERFORMANCE_TUNING.md  QUICK_START.md  cli-reference.md
planning/embeddings/rapydocs/mbed-unified/docs/deployment/: production.md
planning/embeddings/rapydocs/mbed-unified/docs/installation/: README.md
planning/embeddings/rapydocs/mbed-unified/mbed_data/chromadb/: chroma.sqlite3
planning/embeddings/rapydocs/mbed-unified/src/examples/: basic_usage.py  cuda_example.py
planning/embeddings/rapydocs/mbed-unified/src/mbed/: __init__.py  __main__.py  cli.py
planning/embeddings/rapydocs/mbed-unified/src/mbed/backends/: __init__.py  base.py  cpu.py  cuda.py  mps.py  ollama.py  openvino.py  openvino_async.py
planning/embeddings/rapydocs/mbed-unified/src/mbed/core/: __init__.py  async_processing.py  batch_optimizer.py  caching.py  config.py  error_handler.py  hardware.py  logging.py  memory_manager.py  memory_pool.py  orchestrator.py  parallel_coordinator.py  profiling.py  result.py  statistics.py
planning/embeddings/rapydocs/mbed-unified/src/mbed/databases/: __init__.py  base.py  chromadb.py  faiss_backend.py  postgres.py  qdrant.py
planning/embeddings/rapydocs/mbed-unified/src/mbed/pipeline/: batch_orchestrator.py  chunker.py  file_processor.py
planning/embeddings/rapydocs/mbed-unified/src/mbed/pipeline/strategies/: code_chunker.py  fixed_chunker.py  hierarchical_chunker.py  paragraph_chunker.py  semantic_chunker.py  sentence_chunker.py  topic_chunker.py
planning/embeddings/rapydocs/mbed-unified/src/mbed/utils/: __init__.py  cache_utils.py  uv.py
planning/embeddings/rapydocs/mbed-unified/tests/: run_tests.py
planning/embeddings/rapydocs/mbed-unified/tests/integration/: test_backend_integration.py  test_chunking_strategies.py  test_cpu_performance.py  test_database_integration.py  test_performance_optimization.py  test_performance_optimization_simple.py  test_pipeline_integration.py
planning/embeddings/rapydocs/mbed-unified/tests/migrated/mbed1/: test_embeddings_complete_refactored.py
planning/embeddings/rapydocs/mbed-unified/tests/unit/backends/: test_backends.py  test_cuda_backend.py  test_openvino.py
planning/embeddings/rapydocs/mbed-unified/tests/unit/core/: test_config.py  test_hardware.py
planning/embeddings/rapydocs/mbed-unified/tests/unit/databases/: test_database_backends.py
planning/embeddings/rapydocs/specs/: Design.md  Requirements.md  Tasks.md
planning/embeddings/rapydocs/src/: __init__.py
planning/embeddings/rapydocs/src/core/: config.py  logging.py
planning/embeddings/rapydocs/src/database/: create_database.py  faiss_backend.py  postgres_embeddings.py
planning/embeddings/rapydocs/src/embeddings/: bge_m3_embeddings.py  chunking.py  embeddings_factory.py  enhanced_chunking.py  file_processor.py  llm_preprocessor.py  mbed_cli.py  ollama_cuda_embeddings.py  semantic_chunking.py  universal_embeddings.py
planning/embeddings/rapydocs/src/embeddings/parsers/: README.md  __init__.py  base_parser.py  code_parser_main.py  html_parser.py  javascript_parser.py  javascript_tree_parser.py  json_parser.py  markdown_parser.py  python_parser.py
planning/embeddings/rapydocs/src/examples/: logging_example.py  mbed_cli_template.py  mbed_cli_template_rich.py  mbed_cli_unified.py
planning/embeddings/rapydocs/src/utils/: claude_integration.py  common.py  hardware_detection.py  logging_config.py  ollama_service_manager.py
planning/embeddings/rapydocs/tests/: README.md  run_tests.py
planning/embeddings/rapydocs/tests/data/: api_response.json  arrays.json  semantic_types.json  test_data_minimal.json
planning/embeddings/rapydocs/tests/database/: test_postgres_setup.py
planning/embeddings/rapydocs/tests/embeddings/: test_file_processor.py  test_llm_preprocessing.py
planning/embeddings/rapydocs/tests/embeddings/parsers/: test_html_parser.py  test_json_parser.py  test_markdown_parser.py
planning/embeddings/rapydocs/tests/integration/: test_embeddings_complete.py  test_odoo_embedding.py  test_ollama_embeddings.py  test_suite.py
planning/embeddings/tree-sitter/: Cargo.toml
planning/feature-parity/: tasks.md
planning/meilisearch-chat/: tasks.md
planning/refactor-1/: Design.md  Requirements.md  Tasks.md  commands-analysis.md  llm-router-analysis.md  test-consolidation-analysis.md
planning/refactor-2/: 00-index.md  01-codebase-analysis.md  02-module-architecture.md  03-tauri-patterns.md  04-requirements.md  05-personality-module.md  06-search-library-module.md  07-llm-module.md  08-campaign-session-module.md  09-npc-generation-module.md  10-world-utilities-module.md  11-design.md  12-tasks.md  command-inventory.md
planning/settings/: Design.md  Requirements.md  (+1 more)
src-tauri/: Cargo.toml  PERFORMANCE_OPTIMIZATIONS.md  tauri.conf.json
(+570 files in other folders)
