[project]
name = "rapydocs"
version = "0.1.0"
description = "Document processing and embedding generation system with Ollama CUDA support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "RapyDocs Team" }
]

dependencies = [
    "requests>=2.31.0",
    # Note: psycopg2 requires system packages: libpq-dev and gcc (on Debian/Ubuntu)
    # For easier setup in development, use 'pip install -e .[dev]' which includes psycopg2-binary
    "psycopg2>=2.9.0",  # Production: requires libpq-dev. For dev use psycopg2-binary (see dev dependencies)
    "pgvector>=0.4.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.0",
    "python-magic>=0.4.27",
    "filetype>=1.2.0",
    "chardet>=5.2.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.4.0",
    "markdown2>=2.4.0",
    "python-frontmatter>=1.0.0",
    "mistune>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "typing-extensions>=4.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "psycopg2-binary>=2.9.0"  # Binary version for easy local development
]

parsers = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-go>=0.20.0"
]

[project.scripts]
mbed = "src.embeddings.mbed_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "magic.*",
    "filetype.*",
    "chardet.*",
    "PyPDF2.*",
    "docx.*",
    "markdown.*",
    "yaml.*",
    "toml.*",
    "tree_sitter.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]