[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mbed-unified"
version = "1.0.0-dev"
description = "Unified semantic embedding pipeline with hardware acceleration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MBED Contributors", email = "mbed@example.com"}
]
license = {text = "MIT"}
keywords = ["embeddings", "semantic-search", "vector-database", "cuda", "openvino", "mps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (minimal for fast install with UV)
dependencies = [
    # CLI and configuration
    "typer>=0.12",
    "rich>=14.0",
    "pydantic>=2.0",
    # Core functionality
    "numpy>=1.24",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Basic vector store
    "chromadb>=0.4",
    "psutil>=7.0.0",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
# Hardware acceleration backends
cuda = [
    "torch>=2.0",
    "faiss-cpu>=1.7",  # faiss-gpu has limited Python version support
    "nvidia-ml-py>=12.0",
    "sentence-transformers>=3.0",
]

openvino = [
    "openvino>=2024.0",
    "openvino-dev>=2024.0",
]

mps = [
    "torch>=2.0",
    "coremltools>=7.0",
]

# Vector databases
postgres = [
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "sqlalchemy>=2.0",
]

faiss = [
    "faiss-cpu>=1.7",
]

qdrant = [
    "qdrant-client>=1.7",
]

# Embedding models
models = [
    "sentence-transformers>=3.0",
    "transformers>=4.30",
    "ollama-python>=0.1",
]

# Development dependencies (UV will auto-install these for dev work)
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.3",  # parallel tests
    "pytest-watch>=4.2",  # watch mode
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "ipython>=8.0",
]

# Test-specific group (UV recognizes this)
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
]

# Complete installation
all = [
    "mbed-unified[cuda,openvino,postgres,faiss,qdrant,models]"
]

[project.scripts]
mbed = "mbed.__main__:main"

[project.urls]
Homepage = "https://github.com/unified/mbed"
Repository = "https://github.com/unified/mbed"
Issues = "https://github.com/unified/mbed/issues"

# ---------- Tool Configuration ----------

[tool.mbed]
# Default configuration values
hardware = "auto"
model = "nomic-embed-text"
database = "chromadb"
chunk_strategy = "fixed"
chunk_size = 512
chunk_overlap = 128
batch_size = 128
workers = 4
normalize_embeddings = true
enable_gpu = true
db_path = ".mbed/db"
state_dir = ".mbed/state"
cache_dir = ".mbed/cache"
log_level = "INFO"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "ipython>=8.0",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["src/mbed"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mbed"]
